--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,7 +11,7 @@ analyzer:
   errors:
     constant_identifier_names: ignore
     non_constant_identifier_names: ignore
-    prefer_interpolation_to_compose_strings: ignore ignore
+    prefer_interpolation_to_compose_strings: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
