--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   flutter_svg: ^2.0.10+1
   firebase_auth: ^4.20.0
   flutter_animate: ^4.5.0
+  visibility_detector: ^0.4.0+2
+  flip_card: ^0.7.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
