--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,3 +20,7 @@ jobs:
           projectId: scottbebington-portfolio
         env:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
+          EMAILJS_SERVICE_KEY: ${{ secrets.EMAILJS_SERVICE_KEY }}
+          EMAILJS_TEMPLATE_KEY: ${{ secrets.EMAILJS_TEMPLATE_KEY }}
+          EMAILJS_PUBLIC_KEY: ${{ secrets.EMAILJS_PUBLIC_KEY }}
+          EMAILJS_PRIVATE_KEY: ${{ secrets.EMAILJS_PRIVATE_KEY }}
