--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,8 @@ dependencies:
   carousel_slider: ^4.2.1
   http: ^1.2.1
   emailjs: ^4.0.0
-  dotenv: ^4.2.0
-  flutter_dotenv: ^5.1.0
+  firebase_remote_config: ^4.4.7
+  remote_config: ^1.3.0+3
 
 dev_dependencies:
   flutter_test:
