--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   emailjs: ^4.0.0
   firebase_remote_config: ^4.4.7
   remote_config: ^1.3.0+3
+  typewritertext: ^3.0.6
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
